--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 [dependencies]
 aoc-runner = "0.3.0"
 aoc-runner-derive = "0.3.0"
+
+[dev-dependencies]
+criterion = "0.5.1"
+
+[[bench]]
+name = "day01_benchmark"
+harness = false
