--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 aoc-runner = "0.3.0"
 aoc-runner-derive = "0.3.0"
+regex = "1.11.1"
 
 [dev-dependencies]
 criterion = "0.5.1"
@@ -16,6 +17,10 @@ harness = false
 
 [[bench]]
 name = "day02_benchmark"
+harness = false
+
+[[bench]]
+name = "day03_benchmark"
 harness = false
 
 [profile.bench]
