--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 aoc-runner = "0.3.0"
 aoc-runner-derive = "0.3.0"
 regex = "1.11.1"
+winnow = "0.6.20"
 
 [dev-dependencies]
 criterion = "0.5.1"
