--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 aoc-runner = "0.3.0"
 aoc-runner-derive = "0.3.0"
 regex = "1.11.1"
+rustc-hash = "2.1.0"
 winnow = "0.6.20"
 
 [dev-dependencies]
@@ -26,6 +27,10 @@ harness = false
 
 [[bench]]
 name = "day04_benchmark"
+harness = false
+
+[[bench]]
+name = "day05_benchmark"
 harness = false
 
 [profile.bench]
