--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 aoc-runner = "0.3.0"
 aoc-runner-derive = "0.3.0"
+itertools = "0.13.0"
 regex = "1.11.1"
 rustc-hash = "2.1.0"
 winnow = "0.6.20"
@@ -31,6 +32,10 @@ harness = false
 
 [[bench]]
 name = "day05_benchmark"
+harness = false
+
+[[bench]]
+name = "day06_benchmark"
 harness = false
 
 [profile.bench]
